--- a/backend/shopping_cart/templates/orders/order_list.html
+++ b/backend/shopping_cart/templates/orders/order_list.html
@@ -6,6 +6,7 @@
     <title>orders</title>
 </head>
 <body>
+    <h1>list of orders created</h1>
     <ul>
         {% for order in orders%}
             <li>{{ order.id}}</li>
