--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,39 @@
-body {
+:root {
+  --primaryColor: #00adb5;
+  --backgroundColor: #eeeeee;
+  --onBackegroundColor: #222831;
+}
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+}
+
+body {
+  background-color: var(--backgroundColor);
+  color: var(--onBackegroundColor);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+svg {
+  fill: var(--onBackegroundColor);
+}
+
+a {
+  color: unset;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:hover {
+  color: var(--primaryColor);
 }
